# metabench

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
modules/: __init__.py  benchmark.py  cli.py  config.py  engines.py  generators.py  llm.py  parsers.py  utils.py
