[project]
name = "metabench"
version = "0.1.0"
description = "A sophisticated benchmarking tool that evaluates LLM performance on content transformation tasks with enhanced instruction diversity, creative content generation, proper scoring logic, and comprehensive logging."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.63",
    "langchain-openai>=0.3.18",
]
